# EsercizioCoding-Virtualenv--Gege

./: .gitignore  pyproject.toml
Esercizi.OpenAI/Esercizi/: ex_4_OpenAI_API.ipynb
Esercizi.OpenAI/esercizio_class:abst/: esercizio2.ipynb
soluzioni/: esercizio_class_abst.py  esercizio_funzioni.py
soluzioni/openai_api/: ex_1_OpenAI_API.py
